--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tls": "^0.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
