--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
     "net": "^1.0.2",
@@ -16,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-table": "^7.8.0",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
