--- a/serverside/package.json
+++ b/serverside/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.2.4",
     "cors": "^2.8.5",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   }
