--- a/serverside/package.json
+++ b/serverside/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.4",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "read-excel-file": "^5.6.1",
+    "xlsx": "^0.18.5"
   }
 }
