--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "axios": "^1.3.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
     "net": "^1.0.2",
