--- a/serverside/phpRestfulApi/composer.json
+++ b/serverside/phpRestfulApi/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^3.0",
+        "illuminate/validation": "^8.83",
         "laravel/lumen-framework": "^8.3.1",
         "tuupola/cors-middleware": "^1.4"
     },
