UI lookling and workEXP pt1

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-table": "^7.8.0",
+    "redux": "^4.2.1",
     "tls": "^0.0.1",
     "universal-cookie": "^4.0.4",
     "xlsx": "^0.18.5"
